@@ -8,8 +8,8 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
-group = project.maven_group
+version = "${project.minecraft_version}-${project.mod_version}"
+group = project.maven_group as String
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -22,8 +22,11 @@ dependencies {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 	include "me.shedaniel.cloth:config-2:${project.clothconfig_version}"
-	modImplementation 'the_fireplace.lib:Fireplace-Lib:1.0.0'
-	include 'the_fireplace.lib:Fireplace-Lib:1.0.0'
+	modImplementation "the_fireplace.lib:Fireplace-Lib:${project.fireplacelib_version}"
+	include "the_fireplace.lib:Fireplace-Lib:${project.fireplacelib_version}"
+	modApi("io.github.gunpowder:gunpowder-api:${gunpowder_version}+${minecraft_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 
 	implementation "blue.endless:jankson:1.1.+"
 
@@ -32,7 +35,8 @@ dependencies {
 
 repositories {
 	maven {
-		url  "https://dl.bintray.com/the-fireplace/mc-mods"
+		name = "Gunpowder"
+		url = "https://maven.martmists.com/releases"
 	}
 }
 
@@ -95,8 +99,10 @@ curseforge {
 			displayName = "$archivesBaseName-$version"
 			relations {
 				requiredDependency 'fabric-api'
+				embeddedLibrary 'fireplace-lib'
 				embeddedLibrary 'cloth-config'
 				optionalDependency 'modmenu'
+				optionalDependency 'gunpowder-currency'
 			}
 		}
 	}
