@@ -10,10 +10,13 @@ loader_version=0.10.8
 # Mod Properties
 mod_version = 3.0.0
 maven_group = the_fireplace.grandeconomy
-archives_base_name = GrandEconomy-1.16.4
+archives_base_name = GrandEconomy
 	
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.28.1+1.16
+fireplacelib_version=1.16.4-1.0.3
 clothconfig_version=4.8.3
 modmenu_version=1.14.13+build.19
+
+gunpowder_version=0.3.4
